Fix T87317: Cycles XML parsing broken after bugfix for initialization order